--- a/views/client/partials/footer.ejs
+++ b/views/client/partials/footer.ejs
@@ -42,4 +42,30 @@
     <!-- social-group-area-end -->
 </footer>
 <!-- footer-area-end -->
-
+<!-- all js here -->
+<!-- jquery latest version -->
+<script src='client/js/vendor/jquery-1.12.0.min.js'></script>
+<!-- bootstrap js -->
+<script src='client/js/bootstrap.min.js'></script>
+<!-- owl.carousel js -->
+<script src='client/js/owl.carousel.min.js'></script>
+<!-- meanmenu js -->
+<script src='client/js/jquery.meanmenu.js'></script>
+<!-- wow js -->
+<script src='client/js/wow.min.js'></script>
+<!-- jquery.parallax-1.1.3.js -->
+<script src='client/js/jquery.parallax-1.1.3.js'></script>
+<!-- jquery.countdown.min.js -->
+<script src='client/js/jquery.countdown.min.js'></script>
+<!-- jquery.flexslider.js -->
+<script src='client/js/jquery.flexslider.js'></script>
+<!-- chosen.jquery.min.js -->
+<script src='client/js/chosen.jquery.min.js'></script>
+<!-- jquery.counterup.min.js -->
+<script src='client/js/jquery.counterup.min.js'></script>
+<!-- waypoints.min.js -->
+<script src='client/js/waypoints.min.js'></script>
+<!-- plugins js -->
+<script src='client/js/plugins.js'></script>
+<!-- main js -->
+<script src='client/js/main.js'></script>
