--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -64,11 +64,12 @@
                             <div class="tab-pane active" id="newarrival">
                                 <div class="tab-active owl-carousel">
                                     <!-- single-product-start -->
-                                    <% index.forEach(function(sp){ %>
+                                    <!-- <% index.forEach(function(sp){ %> -->
                                         <div class="product-wrapper">
                                             <div class="product-img">
                                                 <a href="#">
-                                                    <img src="client/img/product/<%= sp.hinhanh %>" alt="book"
+                                                    <!-- <%= sp.hinhanh %> -->
+                                                    <img src="client/img/product/" alt="book"
                                                         class="primary" />
                                                 </a>
                                                 <div class="quick-view">
@@ -94,12 +95,12 @@
                                                     </ul>
                                                 </div>
                                                 <h4><a href="#">
-                                                        <%= sp.tensp %>
+                                                        <!-- <%= sp.tensp %> -->
                                                     </a></h4>
                                                 <div class="product-price">
                                                     <ul>
                                                         <li>
-                                                            <%= sp.giatien %>
+                                                            <!-- <%= sp.giatien %> -->
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -117,7 +118,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    <% }); %>
+                                    <!-- <% }); %> -->
                                     <!-- single-product-end -->    
                                 </div>
                             </div>
