--- a/views/admin/partials/adminhead.ejs
+++ b/views/admin/partials/adminhead.ejs
@@ -1,6 +1,6 @@
 <head>
     <base href="http://localhost:3000" />
-    <title></title>
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Visitors Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
