--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -952,6 +952,10 @@ div#graph1,div#graph4,div#graph5,div#graph6,div#graph7,div#graph8,div#graph9 {
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
     border-bottom: 1px solid #e9e9e9 ! important;
 }
+.table>tbody>tr>td>img{
+    width:100px; 
+    height:100px;
+}
 .progress.progress-right {
     width: 25%;
     float: right;
