create route register

--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -30,7 +30,7 @@
                     <div class="account-area text-right">
                         <ul>
                             <li><a href="register.html">Sign in</a></li>
-                            <li><a href="checkout.html">Sign Up</a></li>
+                            <li><a href="/dangky">Sign Up</a></li>
                             <li><a href="login.html">Log Out</a></li>
                         </ul>
                     </div>
