--- a/views/client/dangky/dangky.ejs
+++ b/views/client/dangky/dangky.ejs
@@ -8,7 +8,7 @@
                 <!-- user-login-area-start -->
                 <div class="user-login-area mb-70">
                     <div class="container">
-                        <form action="dang-ky.php" method="post">
+                        <form action="/dangky/sendinfor" method="post">
                             <div class="row" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="col-lg-12">
                                     <div class="login-title text-center mb-30">
@@ -64,7 +64,7 @@
 
                                         </div>
                                         <div class="single-register" align="center">
-                                            <input type="submit" name="btn_submit" value="Register">
+                                            <input type="submit" name="btn btn-primary" value="Register">
                                         </div>
                                     </div>
                                 </div>
