load trang thuong hieu

--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -112,8 +112,8 @@
                     <div class="menu-area">
                         <nav>
                             <ul>
-                                <li class="active"><a href="index.html">HOME<i class="fa fa-angle-down"></i></a></li>
-                                <li><a href="thuonghieu.html">THƯƠNG HIỆU<i class="fa fa-angle-down"></i></a></li>
+                                <li class="active"><a href="/home">HOME<i class="fa fa-angle-down"></i></a></li>
+                                <li><a href="/thuonghieu">THƯƠNG HIỆU<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="product-details.html">ĐỒNG HỒ NAM<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="product-details.html">ĐỒNG HỒ NỮ<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="product-details.html">TIN TỨC</a></li>
