--- a/public/client/style.css
+++ b/public/client/style.css
@@ -1268,7 +1268,9 @@ body {
 .product-wrapper-tk img{
     height:260px ;
 }
-.product-img,
+.product-img{
+    width: 80%;
+},
 
 .most-product-img {
     position: relative;
@@ -4629,18 +4631,24 @@ nav.menu .cr-dropdown ul {
     float: left;
     width: 65%;
 }
-.author-destils .author-left .author-img {
+.author-destils .author-left {
     display: inline-block;
     float: left;
     margin-right: 10px;
     width: 10%;
 }
-.author-img a{
-    float: left;
+.author-img {
+    display: flex;
+    flex-wrap: wrap;
 }
+
 .thuonghieu-row1{
+    height:10rem;
+    margin-left: 0.5rem;
+    margin-bottom: 2rem;
     margin-right: 20px;
 }
+
 .thuonghieu{
     margin-top: 10px;
     margin-right: 20px;
