chuc năng dang nhap

--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -29,7 +29,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="account-area text-right">
                         <ul>
-                            <li><a href="register.html">Sign in</a></li>
+                            <li><a href="/dangnhap">Sign in</a></li>
                             <li><a href="/dangky">Sign Up</a></li>
                             <li><a href="login.html">Log Out</a></li>
                         </ul>
@@ -112,7 +112,7 @@
                     <div class="menu-area">
                         <nav>
                             <ul>
-                                <li class="active"><a href="/home">HOME<i class="fa fa-angle-down"></i></a></li>
+                                <li class="active"><a href="/">HOME<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="/thuonghieu">THƯƠNG HIỆU<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="product-details.html">ĐỒNG HỒ NAM<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="product-details.html">ĐỒNG HỒ NỮ<i class="fa fa-angle-down"></i></a></li>
