--- a/views/client/dangky/dangky.ejs
+++ b/views/client/dangky/dangky.ejs
@@ -6,13 +6,13 @@
         <div class="app">
             <%- include ('../partials/header'); -%>
                 <!-- user-login-area-start -->
-                <div class="user-login-area mb-70">
+                <div class="user-login-area mb-70 mt-40">
                     <div class="container">
                         <form action="/dangky/sendinfor" method="post">
                             <div class="row" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="col-lg-12">
                                     <div class="login-title text-center mb-30">
-                                        <h2>Sign Up</h2>
+                                        <h2>Đăng ký</h2>
                                     </div>
                                 </div>
                                 <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
@@ -20,7 +20,7 @@
                                         <div class="row">
                                             <div class="col-xs-12">
                                                 <div class="single-register">
-                                                    <p>Username<span>*</span></p>
+                                                    <p>Tên đăng nhập<span>*</span></p>
                                                     <input class="register-signup-infor" type="text" id="username"
                                                         name="username" />
                                                 </div>
@@ -29,14 +29,14 @@
                                         <div class="row">
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <div class="single-register">
-                                                    <p>Email Address<span>*</span></p>
+                                                    <p>Địa chỉ email<span>*</span></p>
                                                     <input class="register-emailaddress-phone" type="email" id="email"
                                                         name="email" />
                                                 </div>
                                             </div>
                                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                                 <div class="single-register">
-                                                    <p>Phone<span>*</span></p>
+                                                    <p>Số điện thoại<span>*</span></p>
                                                     <input class="register-emailaddress-phone" type="text" id="phone"
                                                         name="phone" />
                                                 </div>
@@ -45,26 +45,26 @@
                                         <div class="row">
                                             <div class="col-xs-12">
                                                 <div class="single-register">
-                                                    <p>Fullname<span>*</span></p>
+                                                    <p>Họ tên đầy đủ<span>*</span></p>
                                                     <input class="register-signup-infor" type="text" id="name"
                                                         name="name" />
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="single-register">
-                                            <p>Address<span>*</span></p>
+                                            <p>Địa chỉ<span>*</span></p>
                                             <input class="register-signup-infor" type="text" id="address" name="address"
                                                 placeholder="Street address" />
                                         </div>
                                         <div class="single-register">
 
-                                            <p>Password<span>*</span></p>
+                                            <p>Mật khẩu<span>*</span></p>
                                             <input class="register-signup-infor" type="password" id="password"
                                                 name="password" placeholder="Password" />
 
                                         </div>
                                         <div class="single-register" align="center">
-                                            <input type="submit" name="btn btn-primary" value="Register">
+                                            <input type="submit" name="btn btn-primary" value="Đăng ký">
                                         </div>
                                     </div>
                                 </div>
