--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -114,9 +114,9 @@
                             <ul>
                                 <li class="active"><a href="/">HOME<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="/thuonghieu">THƯƠNG HIỆU<i class="fa fa-angle-down"></i></a></li>
-                                <li><a href="product-details.html">ĐỒNG HỒ NAM<i class="fa fa-angle-down"></i></a></li>
-                                <li><a href="product-details.html">ĐỒNG HỒ NỮ<i class="fa fa-angle-down"></i></a></li>
-                                <li><a href="product-details.html">TIN TỨC</a></li>
+                                <li><a href="/donghonam">ĐỒNG HỒ NAM<i class="fa fa-angle-down"></i></a></li>
+                                <li><a href="/donghonu">ĐỒNG HỒ NỮ<i class="fa fa-angle-down"></i></a></li>
+                                <li><a href="/tintuc">TIN TỨC</a></li>
                                 <li><a href="product-details.html">LIÊN HỆ</a></li>
                                 <li><a href="product-details.html">KHUYẾN MÃI<i class="fa fa-angle-down"></i></a></li>
                             </ul>
