--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -117,8 +117,8 @@
                                 <li><a href="/donghonam">ĐỒNG HỒ NAM<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="/donghonu">ĐỒNG HỒ NỮ<i class="fa fa-angle-down"></i></a></li>
                                 <li><a href="/tintuc">TIN TỨC</a></li>
-                                <li><a href="product-details.html">LIÊN HỆ</a></li>
-                                <li><a href="product-details.html">KHUYẾN MÃI<i class="fa fa-angle-down"></i></a></li>
+                                <li><a href="/lienhe">LIÊN HỆ</a></li>
+                                <li><a href="/khuyenmai">KHUYẾN MÃI<i class="fa fa-angle-down"></i></a></li>
                             </ul>
                         </nav>
                 </div>
