--- a/views/client/partials/menuleft.ejs
+++ b/views/client/partials/menuleft.ejs
@@ -17,7 +17,7 @@
         <div class="blog-side-menu">
             <ul>
                 <% indexTH.forEach(function(sp){ %>
-                <li><a href="#"><%= sp.tenth %></a></li>
+                <li><a href="/thuonghieu/getproductbytranmarkid?id=<%= sp.math %>"><%= sp.tenth %></a></li>
                 <% }) %>
             </ul>
         </div>
