--- a/views/admin/partials/adminleft.ejs
+++ b/views/admin/partials/adminleft.ejs
@@ -39,7 +39,7 @@
                         <span>Quản lý khách hàng</span>
                     </a>
                     <ul class="sub">
-						<li><a href="typography.html">Khách hàng</a></li>
+						<li><a href="/admin/khachhang">Khách hàng</a></li>
 						
                     </ul>
                 </li>
