--- a/views/client/khuyenmai/khuyenmai.ejs
+++ b/views/client/khuyenmai/khuyenmai.ejs
@@ -312,8 +312,7 @@
                                             <a href="#"><i class="fa fa-quote-right"></i></a>
                                         </div>
                                         <div class="testimonial-text">
-                                            <p>I'm so happy with all of the themes, great support, could not wish for more. These people are <br /> geniuses ! Kudo's from the Netherlands !</p>
-                                            <a href="#">Sandy Wilcke/user</a>
+                                            <p>Thời gian của các bạn là có hạn, vì thế đừng lãng phí để sống một cuộc đời ai đó!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -323,8 +322,7 @@
                                             <a href="#"><i class="fa fa-quote-right"></i></a>
                                         </div>
                                         <div class="testimonial-text">
-                                            <p>All Perfect !! I have three sites with magento , this theme is the best !! Excellent support ,<br /> advice theme installation package , sorry for English, are Italian but I had no problem !! Thank you !</p>
-                                            <a href="#">Sandy Wilcke/user</a>
+                                            <p>Đừng lãng phí thời gian với những người không có thời gian dành cho bạn! Cảm ơn bạn!</p>
                                         </div>
                                     </div>
                                 </div>
