--- a/views/client/partials/menuleft.ejs
+++ b/views/client/partials/menuleft.ejs
@@ -58,4 +58,12 @@
             </div>
         </div>
     </div>
+    <div class="row" >
+        <div class="col-md-12">
+            <h3 class="text-center">MÔ TẢ THƯƠNG HIỆU</h3>
+            <p class="text-centerthuonghieu">
+                <%= motatt %>
+            </p>
+        </div>
+    </div>
 </div>
