--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -31,7 +31,7 @@
                         <ul>
                             <li><a href="/dangnhap">Sign in</a></li>
                             <li><a href="/dangky">Sign Up</a></li>
-                            <li><a href="login.html">Log Out</a></li>
+                            <li><a href="/dangnhap/logout">Log Out</a></li>
                         </ul>
                     </div>
                 </div>
