--- a/views/client/dangnhap/dangnhap.ejs
+++ b/views/client/dangnhap/dangnhap.ejs
@@ -38,6 +38,16 @@
                                                       </div>
                                                       <div id="name"></div>
                                                 </div>
+                                                <div class="col-md-6">
+                                                    <div id="gSignInWrapper" onclick="authFacebook()">
+                                                        <span class="label">Sign in with:</span>
+                                                        <div id="customBtn" class="customGPlusSignIn">
+                                                          <span class="icon-facebook"></span>
+                                                          <span class="buttonText">FaceBook</span>
+                                                        </div>
+                                                      </div>
+                                                      <div id="name"></div>
+                                                </div>
                                             </div>
                                             <p>Chưa có tài khoản ? <a href="/dangky">Đăng ký</a></p>
                                         </div>
@@ -59,6 +69,10 @@
 
         function authGoogle(){
             window.location.replace("/dangnhap/auth/google")
+        }
+
+        function authFacebook(){
+            window.location.replace("/dangnhap/auth/facebook")
         }
     </script>
     <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
