--- a/views/client/chitietsp/chitietsp.ejs
+++ b/views/client/chitietsp/chitietsp.ejs
@@ -20,8 +20,8 @@
                                                         <img src="client/img/product/<%= indexct[0].hinhanh %>" alt="woman" />
                                                      </li>  
                                                     <% indexct.forEach((el)=>{ %>
-                                                        <li data-thumb="client/img/product/<%= el.tenimg %>">
-                                                            <img src="client/img/product/<%= el.tenimg %>" alt="woman" />
+                                                        <li data-thumb="client/img/product/<%= el.tenha %>">
+                                                            <img src="client/img/product/<%= el.tenha %>" alt="woman" />
                                                          </li>    
                                                     <% }) %>
                                                      
