--- a/views/client/dangnhap/dangnhap.ejs
+++ b/views/client/dangnhap/dangnhap.ejs
@@ -11,21 +11,21 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="login-title text-center mb-30 mt-40">
-                                            <h2>Sign In</h2>
+                                            <h2>Đăng nhập</h2>
                                         </div>
                                     </div>
                                     <div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
                                         <div class="login-form">
                                             <div class="single-login">
-                                                <label>Username or email<span>*</span></label>
+                                                <label>Tên đăng nhập hoặc email<span>*</span></label>
                                                 <input type="text" id="username" name="username" />
                                             </div>
                                             <div class="single-login">
-                                                <label>Passwords <span>*</span></label>
+                                                <label>Mật khẩu <span>*</span></label>
                                                 <input type="password" id="password" name="password" />
                                             </div>
                                             <div class="single-login single-login-2">
-                                                <input type="submit" name="btn btn-primary" value="Login" />
+                                                <input type="submit" name="btn btn-primary" value="Đăng nhập" />
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-6">
