--- a/views/client/home/index.ejs
+++ b/views/client/home/index.ejs
@@ -493,5 +493,38 @@
                 <%- include ('../partials/footer'); -%>
         </div>
     </body>
+<script>
+    let mess = '<%= mess %>';
+    
+    if(mess && mess == 1){
+        alert('Đăng ký thành công !');
+    }
 
+    if(mess && mess == 2){
+        alert('Thanh toán thành công !');
+    }
+</script>
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      xfbml            : true,
+      version          : 'v10.0'
+    });
+  };
+
+  (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your Chat Plugin code -->
+<div class="fb-customerchat"
+  attribution="setup_tool"
+  page_id="101756555454202">
+</div>
 </html>
