--- a/views/client/donhang/donhang.ejs
+++ b/views/client/donhang/donhang.ejs
@@ -113,4 +113,10 @@
             <%- include ('../partials/footer'); -%>
         </div>
     </body>
+    <script>
+        let mess = "<%= message %>";
+        if (mess && mess != '') {
+            alert(mess);
+        }
+    </script>
 </html>
